<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/button_cancel_dialog_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:elevation="5dp"
        android:layout_alignParentRight="true"
         />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layoutDirection="locale"
        >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/coloritem"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/one_more_step"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/shopping_cart_black_24dp"
            android:layout_marginBottom="10dp"

            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextStyleEditext"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/address_dialog_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/home_address"
                android:layout_margin="5dp"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextStyleEditext"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/comment_dialog_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/commment"
                android:layout_margin="5dp"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_method"
            android:layout_margin="3dp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            >

         <RadioButton
             android:id="@+id/radio_shipaddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/ShipeThis_address"
             />

          <RadioButton
              android:id="@+id/radio_home_address"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/home_address"
              />


        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_margin="3dp"
            />

        <RadioGroup
            android:id="@+id/radioGroub_Payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            >

            <RadioButton
                android:id="@+id/radio_payment_cashOnDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_cashDelivery"
                />

            <RadioButton
                android:id="@+id/radio_payment_PAYPAL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_payment_PAYPAL"
                />


            <RadioButton
                android:id="@+id/radio_payment_Balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_payment_balance"
                />
        </RadioGroup>


        <Button
            android:id="@+id/button_yes_dialog_cart"
            android:layout_marginTop="20dp"
            android:text="@string/yes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_green_round"
            android:layout_gravity="center"
            />



    </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
    </ScrollView>

</RelativeLayout>

