<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/icon_menu_restaurant_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Menu" />


        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/shopping_cart_black_24dp"
           android:iconTint="@android:color/white"
            android:title="Cart" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Favorites" />


        <item
            android:id="@+id/nav_home_address"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_address_dialog"
            android:iconTint="@android:color/white"

            />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/icon_menu_time_black_24dp"
            android:iconTint="@android:color/white"
            android:title="Orders" />

        <item
            android:id="@+id/nav_feedback_client"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/feedback_service"
            />



        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/settings"
            />


        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/about_me"
            android:iconTint="@color/white"
            android:title="@string/about_me"
            />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_menu_exit_to_app_black_24dp"
            android:title="Sign out"
            android:iconTint="@android:color/white"
            />


    </group>



</menu>
