<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:fillViewport="true"
    android:layoutDirection="locale"
    android:background="@drawable/signin"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textHeaderSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold"

            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextStyleEditext"
            android:layout_marginTop="10dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Name_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:textSize="16dp"
                android:inputType="text"
                android:hint="@string/Name_User"
                android:text="mahmoud"
                android:textColor="@android:color/white"
                android:textStyle="bold"

                />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextStyleEditext"
            android:layout_marginTop="10dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Phone_Number_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:textSize="16dp"
                android:inputType="phone"
                android:hint="@string/Phone_Number"
                android:text="0109646"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:theme="@style/TextStyleEditext"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Password_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Password"
                android:paddingBottom="20dp"
                android:textSize="16dp"
                android:text="1234"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:theme="@style/TextStyleEditext"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/secureCode_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/secure_code"
                android:paddingBottom="20dp"
                android:textSize="16dp"
                android:text="1234"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/Button_SignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btnsignin"
            android:text="@string/Sign_Up"
            android:textColor="@android:color/white"
            android:layout_marginBottom="15dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadhaveeaccount"
                android:layout_marginRight="5dp"
                android:textColor="#fcdf03"
                />


            <TextView
                android:id="@+id/Text_SignIn_Here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_In_Here"
                android:textSize="20dp"
                android:textColor="#ffffff"

                />

        </LinearLayout>


    </LinearLayout>




</ScrollView>