<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#17ca0d"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_food_delivery"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="#ffd500"
        android:fontFamily="sans-serif-condensed"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:src="@drawable/feedback"
        android:layout_gravity="center"
        />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_delivery"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ratingx"
            android:layout_gravity="center"
            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp"
             >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/markershipper"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:id="@+id/text_shipper_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="shipper: ابو الحناكش"
                    android:layout_gravity="center"
                    android:textColor="#094809"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    />

            </LinearLayout>



            <RatingBar
                android:id="@+id/ratingbar_feedback"
                android:theme="@style/RatingBar"
                android:rating="0"
                android:stepSize="1"
                android:numStars="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_rating_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_rating"
                android:layout_gravity="center"
                android:background="@color/white"
                android:textColor="#094809"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/edittext_feedback"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:hint="@string/Show_your_opinion_incomment"
                android:background="#f5fac7"
                android:textColorHint="@color/greenW"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/green"
                />

            <Button
                android:id="@+id/btn_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffd500"
                android:text="@string/thank_you_feedback"
                android:textColor="#080808"
                android:textStyle="bold"
                />

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>