<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"
            app:passwordToggleEnabled="true"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/old_password_ChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_Password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"
            app:passwordToggleEnabled="true"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_password_ChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_Password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/TextStyleEditext"
            app:passwordToggleEnabled="true"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/repeat_password_ChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_Password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>