<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bfood.spotting.eng_mahnoud83coffey.embeatit.NextActivity"
    android:orientation="vertical"
   android:background="@drawable/m1"
    >



    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/my_log2"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/greenW"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextStyleEditext"
        android:layout_margin="5dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_name_nextActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textSize="16dp"
            android:inputType="text"
            android:hint="@string/name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:background="@color/white"
            android:padding="15dp"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_address"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/greenW"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"

        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:theme="@style/TextStyleEditext"
        android:layout_margin="5dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_HomeAddress_nextActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/home_address"
            android:paddingBottom="20dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:background="@color/white"
            android:padding="15dp"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnfinish_nextActivity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/btnsignup"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


</LinearLayout>